<resources>
    <string name="app_name">Projekt</string>
    <string name="add_receipt">Add receipt</string>
    <string name="optional_receipt_name">Optional receipt name</string>
    <string name="load_database">Load database</string>
    <string name="delete_receipt">Delete receipt</string>
    <string name="find_receipt">Find receipt</string>
    <string name="receip_date">Receip date</string>
    <string name="receipt_id">Receipt id</string>
    <string name="textview">TextView</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="product_category">Product category</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="view_products">View products</string>
    <string name="delete_product">delete product</string>
    <string name="product_id">Product id</string>
    <string name="products">Products</string>
    <string name="receipts">Receipts</string>
    <string name="delete_last_product">delete last product</string>
    <string name="cancel_receipt">cancel receipt</string>
    <string name="receipt_date">Receipt date</string>
    <string name="fill_db">fill db</string>
    <string name="select_the_date">Select the date</string>
    <string name="analyze">Analyze</string>
    <string name="mm_yyyy">mm/yyyy</string>
    <string name="analyze_expenses">Analyze expenses</string>
</resources>