<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <Button
        android:id="@+id/btn_add_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="add_receipt"
        android:text="@string/add_receipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <EditText
        android:id="@+id/edittext_receipt_name"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:hint="@string/optional_receipt_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_receipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_receipt_date"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_inspect_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="inspect_receipts"
        android:text="@string/find_receipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_receipt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="load_receipts"
        android:text="@string/load_database"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_inspect_receipt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_receipt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_delete_receipt_by_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="analyze_expenses"
        android:text="@string/analyze_expenses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_inspect_receipt"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_receipt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_receipt_date"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/receipt_date"
        android:importantForAutofill="no"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/lst"
        android:layout_width="356dp"
        android:layout_height="285dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inspect_receipt"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/btn_fill_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="fill_db"
        android:text="@string/fill_db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

</androidx.constraintlayout.widget.ConstraintLayout>