<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inspect_receipts">

    <TextView
        android:id="@+id/tv_inspect_receipts_receipts_lst"
        android:layout_width="387dp"
        android:layout_height="248dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="2dp"
        android:scrollHorizontally="true"
        app:layout_constraintBottom_toTopOf="@+id/et_inspect_receipts_receipt_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btn_isnpect_receipt_delete_product"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:onClick="remove_product"
        android:text="@string/delete_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_isnpect_receipt_view_products"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/btn_isnpect_receipt_view_products"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:onClick="view_products"
        android:text="@string/view_products"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/btn_inspect_receipts_delete_receipt"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:onClick="remove_receipt"
        android:text="@string/delete_receipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_isnpect_receipt_view_products"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/tv_inspect_receipts_products_lst"
        android:layout_width="370dp"
        android:layout_height="246dp"
        android:layout_marginTop="12dp"
        android:scrollHorizontally="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_isnpect_receipt_view_products"
        app:layout_constraintVertical_bias="0.267" />

    <EditText
        android:id="@+id/et_inspect_receipts_receipt_id"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="185dp"
        android:layout_marginRight="185dp"
        android:ems="10"
        android:hint="@string/receipt_id"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btn_isnpect_receipt_view_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/receipts"
        app:layout_constraintBottom_toTopOf="@+id/tv_inspect_receipts_receipts_lst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        app:layout_constraintBottom_toTopOf="@+id/tv_inspect_receipts_products_lst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_inspect_receipts_product_id"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:ems="10"
        android:hint="@string/product_id"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btn_isnpect_receipt_view_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>