<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adding_products">

    <TextView
        android:id="@+id/textview_receipt_id_adding_products"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/textview_receipt_date_adding_products"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_receipt_id_adding_products" />

    <TextView
        android:id="@+id/textview_receipt_note_adding_products"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_receipt_date_adding_products"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_adding_products_product_name"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_receipt_note_adding_products"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_adding_products_product_price"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/product_price"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adding_products_product_name"
        app:layout_constraintVertical_bias="0.0"
        android:inputType="number"
        android:digits="1234567890. "
        />

    <Spinner
        android:id="@+id/spn_adding_products_product_category"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adding_products_product_price"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_adding_products_add"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="add_product"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_adding_products_product_category"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/btn_adding_products_cancel_receipt"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="cancel_receipt"
        android:text="@string/cancel_receipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_adding_products_add"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_adding_products_product_category"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/btn_adding_products_delete_last_product"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="delete_last_product"
        android:text="@string/delete_last_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_adding_products_add"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_adding_products_cancel_receipt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_adding_products_finish"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="finish"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_adding_products_delete_last_product"
        app:layout_constraintTop_toBottomOf="@+id/btn_adding_products_add"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textview_lst_adding_products"
        android:layout_width="250dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toTopOf="@+id/et_adding_products_product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/textview_receipt_date_adding_products"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:text="Product category:"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/spn_adding_products_product_category"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adding_products_product_price" />

</androidx.constraintlayout.widget.ConstraintLayout>